...
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/consLay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/buttonCancel"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:backgroundTint="#9F9F9F"
                android:text="@string/button_delete"
                android:textColor="#000000"
                android:textSize="18sp"
                app:layout_constraintEnd_toStartOf="@+id/buttonSave"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/buttonSave"
                android:layout_width="0dp"
...
                android:layout_height="120dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="28dp"
                android:background="@drawable/camara__"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/textInputName"
                app:layout_constraintTop_toBottomOf="@+id/buttonSave" />

            <Button
                android:id="@+id/buttonClearimg"
                android:layout_width="120dp"
                android:layout_height="35dp"
...
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/buttonCancel">

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputItem"
                android:layout_width="175dp"
                android:layout_height="40dp"
                android:layout_marginStart="48dp"
                android:layout_marginTop="32dp"
                android:hint="@string/hint_item"
                android:singleLine="true"
...
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textItem">

            </com.google.android.material.textfield.TextInputLayout>

            <Spinner
                android:id="@+id/tipe1"
                android:layout_width="150dp"
                android:layout_height="30dp"
                android:layout_marginTop="60dp"
                android:background="#ACACAC"
                android:theme="@style/spinnercolor"
                app:layout_constraintEnd_toEndOf="parent"
...
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textdate">

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputAtt"
                android:layout_width="175dp"
                android:layout_height="40dp"
                android:layout_marginTop="64dp"
                android:hint="@string/hint_attack"
                android:inputType="number"
                android:textColor="#000000"
...
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputDate">

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputHp"
                android:layout_width="175dp"
                android:layout_height="40dp"
                android:layout_marginTop="168dp"
                android:hint="@string/hint_hp"
                android:inputType="number"
                android:textColor="#000000"
...
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.092"
                app:layout_constraintStart_toEndOf="@+id/tipe1"
                app:layout_constraintTop_toBottomOf="@+id/buttonClearimg" />

            <Button
                android:id="@+id/butcalendar"
                android:layout_width="40dp"
                android:layout_height="36dp"
                android:layout_marginTop="76dp"
                android:background="@android:drawable/ic_menu_my_calendar"
                android:backgroundTint="#000000"
                app:layout_constraintEnd_toEndOf="parent"
...
