...

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/searchbutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="116dp"
                android:layout_marginBottom="50dp"
                android:text="@string/title_activity_search"
                app:layout_constraintBottom_toBottomOf="parent"
...
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/SearchInputEditName"
                android:layout_width="175dp"
                android:layout_height="40dp"
                android:layout_marginTop="76dp"
                android:hint="@string/hint_name"
                android:singleLine="true"
                app:layout_constraintEnd_toEndOf="parent"
...
