<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_search"
        android:icon="@android:drawable/ic_menu_search"
        android:orderInCategory="100"
        android:title="@string/title_activity_search"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_about"
        android:orderInCategory="100"
        android:title="@string/menu_about" />
    <item
        android:id="@+id/action_help"
        android:orderInCategory="100"
        android:title="@string/menu_help" />

    <item
        android:id="@+id/action_refresh"
        android:icon="@android:drawable/ic_menu_rotate"
        android:orderInCategory="100"
        android:title="Refresh"
        app:showAsAction="ifRoom"
        />
</menu>